dodanie kluczowych funkcjonalności

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,15 +1,15 @@
-FLAGS = -Wall -pedantic -std=c++17
+FLAGS = -Wall -pedantic -std=c++20 -lncurses
 
-./app : main.o tablica.o tablica_wysw.o menu.o 
-	g++ -o app.out main.o tablica.o tablica_wysw.cpp menu.o
+app.out : main.o tablica.o tablica_wysw.o menu.o 
+	g++ -o $@ $^
 
 main.o : main.cpp
-	g++ -c ${FLAGS} -o main.o main.cpp
-tablica_wysw.o : tablica_wysw.cpp tablica.h
-	g++ -c ${flags} -o tablica_wysw.o tablica_wysw.cpp
+	g++ -c ${FLAGS} -o $@ $^
+tablica_wysw.o : tablica_wysw.cpp
+	g++ -c ${FLAGS} -o $@ $^
 
-tablica.o : tablica.cpp tablica.h
-	g++ -c ${FLAGS} -o tablica.o tablica.cpp
+tablica.o : tablica.cpp
+	g++ -c ${FLAGS} -o $@ $^
 
-menu.o : menu.cpp menu.h
-	g++ -c ${FLAGS} -o menu.o menu.cpp
+menu.o : menu.cpp
+	g++ -c ${FLAGS} -o $@ $^
