Wprowadzenie do doxygena, zautomatyzowanie generacji dokumentacji w PDF

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -2,7 +2,10 @@ FLAGS = -Wall -pedantic -std=c++20 -lncurses
 
 app.out : main.o tablica.o tablica_wysw.o menu.o 
 	g++ -o $@ $^
-
+	doxygen config
+	make -C latex/ -f Makefile
+	cp latex/refman.pdf dokumentacja.pdf 
+	make -C latex/ -f Makefile clean
 main.o : main.cpp
 	g++ -c ${FLAGS} -o $@ $^
 tablica_wysw.o : tablica_wysw.cpp
