Naprawa bugów i usprawnienia makefile z doxygen
Dodanie generowania dokumentacji w PDF do makefile.
Naprawa bugów i poprawa czytelności kodu, ustandaryzowanie dostępu do
tablic.

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -16,3 +16,6 @@ tablica.o : tablica.cpp
 
 menu.o : menu.cpp
 	g++ -c ${FLAGS} -o $@ $^
+clean	:  
+	echo "Czyszczenie katalogu"
+	rm -rf latex html *.o *.pdf $@
