--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ html
 # Editor files
 .ccls
 .vscode
+qt*
+
+#cmake
+CMakeFiles
+bin
+build
+cmake_install.cmake
+CMakeCache.txt
+.cmake
+CMakeLists.txt.user
